added extended fresh water flow diagnostics

--- a/src/meanflow/Makefile
+++ b/src/meanflow/Makefile
@@ -40,7 +40,9 @@ ${LIB}(salinity.o)		\
 ${LIB}(stratification.o)	\
 ${LIB}(shear.o)	\
 ${LIB}(buoyancy.o)		\
-${LIB}(convectiveadjustment.o)
+${LIB}(convectiveadjustment.o)	\
+${LIB}(water_balance.o)
+
 
 
 all: $(MOD) $(OBJ)
