initial support for ice models

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,9 +6,10 @@ include Rules.make
 
 DOCSRC	= main.F90 gotm.F90
 
-SUBDIRS	= util input observations airsea meanflow turbulence output
+SUBDIRS	= util input observations airsea ice meanflow turbulence output
 
 CORE_LIBS	=	\
+		-lice$(buildtype)		\
 		-lairsea$(buildtype)		\
 		-lmeanflow$(buildtype) 		\
 		-lturbulence$(buildtype) 	\
