cmake: added observations->util dependency; fixed vs builds

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -176,6 +176,7 @@ add_library(util OBJECT
            )
 
 add_dependencies(input util)
+add_dependencies(observations util)
 add_dependencies(airsea util input)
 add_dependencies(gotm meanflow turbulence output)
 add_dependencies(output util meanflow turbulence)
@@ -227,7 +228,7 @@ endif(USE_FABM)
 if(USE_NetCDF)
   target_link_libraries(gotm_exe "${NetCDF_LIBRARIES}")
   if (NetCDF_STATIC_MSVC_BUILD)
-    set_property(TARGET gotm_exe PROPERTY LINK_FLAGS_RELEASE "/NODEFAULTLIB:\"libcmtd\"")
+    set_property(TARGET gotm_exe PROPERTY LINK_FLAGS_DEBUG "/NODEFAULTLIB:\"libcmtd\"")
     target_compile_options(gotm_exe PRIVATE "/libs:static")
   endif()
 endif(USE_NetCDF)
