cmake: enable BIO, commented out USE_ICE

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -77,11 +77,11 @@ add_library(airsea OBJECT
            )
 set_property(TARGET airsea APPEND PROPERTY COMPILE_DEFINITIONS GUSTINESS)
 
-option(USE_ICE "Include ICE support" OFF)
-if(USE_ICE)
-  add_library(ice OBJECT
-             )
-endif(USE_ICE)
+#option(USE_ICE "Include ICE support" OFF)
+#if(USE_ICE)
+#  add_library(ice OBJECT
+#             )
+#endif(USE_ICE)
 
 add_library(input OBJECT
             input/input.F90
@@ -207,6 +207,33 @@ if(SEAGRASS)
   add_dependencies(gotm seagrass)
 endif()
 
+option(BIO "Enable legacy biogeochemical modules" OFF)
+if(BIO)
+  add_definitions(-DBIO)
+  add_library(bio OBJECT
+              extras/bio/bio.F90
+              extras/bio/bio_fluxes.F90
+              extras/bio/bio_save.F90
+              extras/bio/bio_alloc_info.F90
+              extras/bio/bio_var.F90
+              extras/bio/template/bio_template.F90
+              extras/bio/npzd/bio_npzd.F90
+              extras/bio/cl/bio_cl.F90
+              extras/bio/iow/bio_iow.F90
+              extras/bio/fasham/bio_fasham.F90
+              extras/bio/sed/bio_sed.F90
+              #extras/bio/mab/bio_mab.F90
+              #extras/bio/rolm/bio_rolm.F90
+              extras/bio/npzd_fe/bio_npzd_fe.F90
+              extras/bio/photo/bio_photo.F90
+              extras/bio/mangan/bio_mangan.F90
+             )
+  set_property(TARGET bio APPEND PROPERTY COMPILE_DEFINITIONS NO_0D_BIO BIO_TEMPLATE BIO_NPZD BIO_CL BIO_IOW BIO_FASHAM BIO_SED BIO_NPZD_FE BIO_PHOTO BIO_MANGAN)
+  set(EXTRA_SRCS ${EXTRA_SRCS} $<TARGET_OBJECTS:bio>)
+  add_dependencies(bio util)
+  add_dependencies(gotm bio)
+endif()
+
 target_link_libraries(turbulence util)
 add_dependencies(input util)
 add_dependencies(observations util input)
@@ -217,7 +244,7 @@ add_dependencies(gotm input output util meanflow turbulence observations airsea)
 
 set_property(TARGET util turbulence PROPERTY Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/modules)
 
-option(USE_NetCDF "Include NetCDF support" ON)
+option(USE_NetCDF "Enable output in NetCDF format" ON)
 if(USE_NetCDF)
   find_package(NetCDF REQUIRED)
   add_definitions(-DNETCDF_FMT -DREAL_4B=real\(4\))
